<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SignUpFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/signUp_fragment_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="@dimen/Default_margin"
        android:elevation="@dimen/card_elevation"
        app:layout_constraintBottom_toTopOf="@id/fragment_signUp_button"
        app:layout_constraintVertical_chainStyle="spread">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Default_margin">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUp_fragment_email_layaout"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/email_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_email_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUp_fragment_password_layaout"
                app:layout_constraintTop_toBottomOf="@id/signUp_fragment_email_layaout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/password_hint"
                android:layout_marginTop="@dimen/small_margin"
                app:endIconMode="password_toggle" >


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_password_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberPassword">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUp_fragment_nombre_layaout"
                app:layout_constraintTop_toBottomOf="@id/signUp_fragment_password_layaout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/name_label"
                android:layout_marginTop="@dimen/small_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_nombre_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"/>

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/fragment_signUp_radio_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/signUp_fragment_nombre_layaout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="@dimen/small_margin"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/fragment_signUp_radio_male"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/Maculino"
                    />
                <RadioButton
                    android:id="@+id/fragment_signUp_radio_female"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/Femenino"
                    />
                <RadioButton
                    android:id="@+id/fragment_signUp_radio_other"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Otro"
                    />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_signUp_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/Default_margin"
        android:text="@string/login_label"
        app:layout_constraintBottom_toTopOf="@id/frament_label_nocuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUp_fragment_card">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/frament_label_nocuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tengo_cuenta"
        app:layout_constraintTop_toBottomOf="@id/fragment_signUp_button"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/primaryVariant"
        app:layout_constraintEnd_toStartOf="@id/frament_label_registrate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginBottom="@dimen/Default_margin"
        android:textAppearance="@style/Theme.Prueb1.Body1"
        >
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/frament_label_registrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/frament_label_nocuenta"
        app:layout_constraintBottom_toBottomOf="@id/frament_label_nocuenta"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/iniciar_sesion"
        android:textColor="@color/primaryVariant"
        app:layout_constraintStart_toEndOf="@id/frament_label_nocuenta"
        android:textAppearance="@style/Theme.Prueb1.Body1"
        >
    </com.google.android.material.textview.MaterialTextView>

</androidx.constraintlayout.widget.ConstraintLayout>