<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ForgotFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/forgot_fragment_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="@dimen/Default_margin"
        app:layout_constraintBottom_toTopOf="@id/fragment_forgot_button"
        app:layout_constraintVertical_chainStyle="spread"
        app:cardElevation="@dimen/card_elevation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/Default_margin">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/forgot_fragment_email_layaout"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/email_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_email_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_forgot_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/Default_margin"
        android:text="@string/change_password"
        app:layout_constraintBottom_toTopOf="@id/frament_label_nocuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_fragment_card">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/frament_label_nocuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_tengo_una_cuenta"
        app:layout_constraintTop_toBottomOf="@id/fragment_forgot_button"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/primaryVariant"
        app:layout_constraintEnd_toStartOf="@id/frament_label_registrate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginBottom="@dimen/Default_margin"
        android:textAppearance="@style/Theme.Prueb1.Body1"
        >
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/frament_label_registrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/frament_label_nocuenta"
        app:layout_constraintBottom_toBottomOf="@id/frament_label_nocuenta"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/Registrate_Ahora"
        android:textColor="@color/primaryVariant"
        app:layout_constraintStart_toEndOf="@id/frament_label_nocuenta"
        android:textAppearance="@style/Theme.Prueb1.Body1"
        >
    </com.google.android.material.textview.MaterialTextView>

</androidx.constraintlayout.widget.ConstraintLayout>