<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SpecialistFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/specialist_fragment_banner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/especialidades"
        android:scaleType="fitXY"
        android:layout_width="0dp"
        android:layout_height="148dp">


    </com.google.android.material.imageview.ShapeableImageView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/specialist_fragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/specialist_fragment_banner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/Default_margin"
        tools:text="@string/home_tittle"
        android:textAppearance="@style/Theme.Prueb1.Headline5"
        >

    </com.google.android.material.textview.MaterialTextView>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/specialist_fragment_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/specialist_fragment_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginHorizontal="@dimen/big_marg"
        android:text="@string/home_subtitle"
        android:gravity="center"
        android:textAppearance="@style/Theme.Prueb1.Body1">

    </com.google.android.material.textview.MaterialTextView>


<FrameLayout
    android:id="@+id/specialist_fragment_recycler_container"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/specialist_fragment_subtitle"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginTop="@dimen/Default_margin"
    android:layout_marginHorizontal="32dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/specialist_fragment_recycler_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_recycler_title"
        android:gravity="center"
        android:textAppearance="@style/Theme.Prueb1.Body1"
        android:textColor="@color/primary"
        android:visibility="gone"
        tools:visibility="visible">
    </com.google.android.material.textview.MaterialTextView>

    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/specialist_fragment_recycler_search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:visibility="gone"
        tools:visibility="visible">


        <AutoCompleteTextView
            android:id="@+id/specialist_fragment_recycler_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </AutoCompleteTextView>


    </com.google.android.material.textfield.TextInputLayout>

</FrameLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/specialist_fragment_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/specialist_fragment_recycler_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/small_margin"
        tools:listitem="@layout/item_doctor"
        >

    </androidx.recyclerview.widget.RecyclerView>


</androidx.constraintlayout.widget.ConstraintLayout>